--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('https://cdn.discordapp.com/attachments/877672017829179453/1170130299351474288/image.png');
+            background: url('https://cdn.discordapp.com/attachments/877672017829179453/1173469940016218183/image.png?ex=6564120b&is=65519d0b&hm=f1e4fc8766adb0f5e2693a790c36fdf4b074a4b779f0b5b7377579b3cd6096f4&');
             background-size: cover !important;
             background-repeat: no-repeat !important;
             z-index: -1;
