--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('https://cdn.discordapp.com/attachments/877672017829179453/1173469940016218183/image.png?ex=6564120b&is=65519d0b&hm=f1e4fc8766adb0f5e2693a790c36fdf4b074a4b779f0b5b7377579b3cd6096f4&');
+            background: url('https://cdn.discordapp.com/attachments/1137076209398861927/1204163262929838112/player_list.gif?ex=65d3bb6e&is=65c1466e&hm=e8199ecab40445055c7a86b6a6fb931fd44f300bf277fb2b946dd99460d897af&');
             background-size: cover !important;
             background-repeat: no-repeat !important;
             z-index: -1;
